# calcdnd

./: .gitignore  Cargo.toml  README.md  info.json
scripts/: weapon_getter.py
src/: character.rs  config.rs  data.rs  dragon.rs  event.rs  game.rs  main.rs  ui.rs
