[package]
name = "calcdnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.1"
dialoguer = "0.10.2"
strum = "0.22" # Enum val iter
strum_macros = "0.22"
parse-display = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "^0.8"
